--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
-/* You can add global styles to this file, and also import other style files */
+/*
+ * Entry point of global application style.
+ * Component-specific style should not go here and be included directly as part of the components.
+ */
+ @forward "styles/bootstrap-grid.scss";
+
+ // Theme variables, must be included before the libraries to allow overriding defaults
+ @import "styles/theme-variables.scss";
+
+
+// Theme customization
+@import "styles/theme.scss";
+
+@import "styles/app-styles.scss";
+
+
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+//@include mat-core();
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
